# smart-holmes

./: .gitignore  Cargo.toml  README.md
src/: cartesian_iterator.rs  dependency.rs  device.rs  lib.rs  main.rs  markov_model.rs  service.rs  smart_home.rs  subsystem.rs  transition_matrix.rs  update.rs  update_configuration.rs  user.rs
tests/: update_tests.rs
