[package]
name = "smart_holmes"
version = "0.1.0"
authors = ["Peter <peter.zdankin@uni-due.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smart_holmes"
path = "src/lib.rs"

[profile.release]
debug = true

[[bin]]
name = "smart_holmes_binary"
path = "src/bin/new_main.rs"


[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.1"